Bug fix: Folder picker menu button wraps text when folder name is long
(issue #183)
- Back-ported from version 7.0

--- a/src/pages/new.css
+++ b/src/pages/new.css
@@ -121,11 +121,17 @@ body[data-os="linux"]:not([data-laf="true"]) input[type="checkbox"] + label {
 
 .folder-picker-menubtn {
     width: 100%;
-    padding: 4px 4px 4px 28px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+
+    padding: 4px 20px 4px 28px;
     border-radius: 0;
+
     background-image: var(--url-dropdown-arrow), url("../img/folder.svg");
     background-position: calc(100% - 4px) center, 8px;
     background-repeat: no-repeat;
+
     font: caption !important;
     text-align: start !important;
 }
